Fix - remove ellipsis. Adjust vertical spacing for para after heading in .text-module

--- a/inc/scss/_theme.scss
+++ b/inc/scss/_theme.scss
@@ -2275,7 +2275,11 @@ main form.wpcf7-form {
   }
 
   h4 {
-    padding-top: 1.5rem;
+    margin-bottom: .25rem;
+    padding-top: 0;
+  }
+  h4 + p {
+    margin-top: .5rem;
   }
 }
 
